<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloud Patcher</string>
    <string name="title_main">🚀 Cloud Patcher</string>
    <string name="subtitle_main">أداة التحديث السحابية الذكية</string>
    <string name="btn_choose_original">📂 1. اختر الملف المتوفر لديك</string>
    <string name="btn_choose_patch">📦 2. اختر ملف التحديث (.xz)</string>
    <string name="btn_start_patch">⚡ بدء الدمج والتحديث</string>
    <string name="status_ready">جاهز</string>
    <string name="no_file_selected">لم يتم اختيار ملف</string>
</resources>
